# dnf-plugin-diff

./: .gitignore  .packit.yml  Makefile.am  README  configure.ac
dnf-plugins/: diff.py
dnf5-plugins/: Makefile.am  diff.cc  diff.hh  diff_cmd_plugin.cc
libexec/: dnf-diff-changed-files  dnf-diff-rpm-filename
rpm/: dnf-plugin-diff.spec
